# strava_dash

./: .gitignore  Dockerfile  README.md  heatmap.html  pyproject.toml
app/: func.py  main.py
app/heatmaps/: last_activity.html
heatmaps/: last_activity.html
src/strava_dash/: main.py  utils.py
strava_dash/: func.py  heatmap.html  heatmap.py  main.py
